<resources>
    <string name="app_name">My Application</string>
    <string-array name="Gender">
        <item>Мужчина</item>
        <item>Женщина</item>
    </string-array>

    <string name="Skip1">Пропустить</string>
    <string name="Analysis">Анализы</string>
    <string name="Exsipolpro">Экспресс сбор и получение проб</string>
    <string name="Notif">Уведомление</string>
    <string name="Vbiyores">Вы быстро узнаете о результатах</string>
    <string name="End">Завершить</string>
    <string name="Monitoring">Мониторинг</string>
    <string name="pokaszatrli">Наши врачи всегда наблюдают за вашими показателями здоровья</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="voidite">Войдите, чтобы пользоваться функциями приложения</string>
    <string name="Next">Далле</string>
    <string name="e_mail">Вход по E-mail</string>
    <string name="yan">Или войдиие с помощью</string>
    <string name="Yandex">Войти с Яндекс</string>
    <string name="example_mail_ru">example@mail.ru</string>
    <string name="todo">TODO</string>
    <string name="Email">Введите код из E-mail</string>
    <string name="_60">Отправить код повторно можно будет через секунд</string>
    <string name="MakePas">Создайте пароль</string>
    <string name="Security">Для защиты ваших персональных данных</string>
    <string name="MakeAcard">Создание карты пациента</string>
    <string name="NoCardNoOrder">Без карты пациента вы не сможете заказать аналилзы.</string>
    <string name="CardPacient">В картах пациентов будут храниться результаты анализов вас и ваших близких</string>
    <string name="Create">Создать</string>
    <string name="Name">Имя</string>
    <string name="FatherName">Отчество</string>
    <string name="SecondName">Фамлия</string>
    <string name="day">Дата рождения</string>
    <string name="s">Пол</string>
    <string name="Gender">Пол</string>
    <string name="ef">Карта Пациента</string>
    <string name="Save">Сохранить</string>
</resources>