<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".Youarewelc">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:background="@drawable/hellomessage"
        android:contentDescription="@string/todo" />

    <TextView
        android:layout_width="335dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_gravity="center"
        android:text="@string/voidite" />

    <TextView
        android:text="@string/e_mail"
        android:layout_width="95dp"
        android:layout_height="20dp"
        android:layout_gravity="left"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="40dp"
        tools:ignore="RtlHardcoded" />

    <EditText
        android:id="@+id/EditText"
        android:layout_width="335dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:hint="@string/example_mail_ru"
       />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="335dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/Next"
        android:onClick="Next"
        android:textAllCaps="false"
        android:enabled="false"/>

    <TextView
        android:layout_width="335dp"
        android:layout_height="20dp"
        android:text="@string/yan"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="28mm"
        tools:ignore="InOrMmUsage" />

    <Button
        android:layout_width="335dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/white"
        android:gravity="center"
        android:text="@string/Yandex"
        android:textAllCaps="false"
        android:textColor="@color/blue" />


</LinearLayout>