<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Analis"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/skip1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:onClick="skipActivity"
            android:text="@string/Skip1"
            android:layout_marginStart="13dp"
            android:textAllCaps="false"
            android:textColor="@color/blue"
            android:textSize="18sp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14mm"
        android:background="@drawable/plus" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="60dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Analysis"
            android:textColor="@color/green"
            android:textSize="20sp"
            android:layout_marginLeft="24mm"
            app:layout_constraintVertical_bias="0.363"
            tools:ignore="InOrMmUsage" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Exsipolpro"
            android:layout_marginLeft="14mm"
            android:layout_marginTop="20dp"
            android:textSize="14sp"
            app:layout_constraintVertical_bias="0.442" />

        <ImageView
            android:layout_width="75dp"
            android:layout_height="20dp"
            android:background="@drawable/blue1"
            android:layout_marginLeft="24mm"
            android:layout_marginTop="50dp"
            app:layout_constraintVertical_bias="0.551" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/illustration"
            android:layout_marginLeft="16mm"
            android:layout_marginTop="100dp"
            app:layout_constraintVertical_bias="0.969" />
    </LinearLayout>

</LinearLayout>