<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MakePassword"
    android:orientation="vertical"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/skip1"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="250dp"
            android:layout_marginTop="13dp"
            android:backgroundTint="@color/white"
            android:onClick="skipActivity"
            android:text="@string/Skip1"
            android:textAllCaps="false"
            android:textColor="@color/blue"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:text="@string/MakePas"
            android:textColor="@color/black"
            android:textSize="28dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8.3mm"
            android:layout_marginTop="20dp"
            android:text="@string/Security"
            android:textSize="14sp"
            app:layout_constraintVertical_bias="0.442" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <View
                android:id="@+id/view_1"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:background="@drawable/white_krug_with_blue_line"/>
            <View
                android:id="@+id/view_2"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:background="@drawable/white_krug_with_blue_line"
                android:layout_marginLeft="12dp"/>
            <View
                android:id="@+id/view_3"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:background="@drawable/white_krug_with_blue_line"
                android:layout_marginLeft="12dp"/>
            <View
                android:id="@+id/view_4"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:background="@drawable/white_krug_with_blue_line"
                android:layout_marginLeft="12dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/One"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/uwu"
                android:text="1"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/Two"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/uwu"
                android:layout_marginLeft="24dp"
                android:text="2"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/Three"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/uwu"
                android:layout_marginLeft="24dp"
                android:text="3"/>

        </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/Four"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/uwu"
                    android:text="4"
                    />
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/Five"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/uwu"
                    android:layout_marginLeft="24dp"
                    android:text="5"
                  />
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/Six"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/uwu"
                    android:layout_marginLeft="24dp"
                    android:text="6"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/Seven"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/uwu"
                    android:text="7"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/Eight"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/uwu"
                    android:layout_marginLeft="24dp"
                    android:text="8"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/Nine"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/uwu"
                    android:layout_marginLeft="24dp"
                    android:text="9"
                    />

        </LinearLayout>

    </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="24dp"
            android:layout_gravity="center">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/Zero"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/uwu"
                android:layout_marginLeft="48dp"
                android:text="0"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/Kill"
                android:layout_width="35dp"
                android:layout_height="24dp"
                android:background="@drawable/del"
                android:layout_marginLeft="20dp"
               />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>